tests/NormalTests/paczka1/small_fuzzy/11519224.err
Error in line 1: LTnzjZ A760 91,8
Error in line 8: dQihmGintaf S346 45,0
Error in line 9: dQihmGintaf A894 63,2
Error in line 7: A760 S346 11,6
Error in line 10: dQihmGintaf A381 31,6
